pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodeapp
  labels:
    app: nodeapp
spec:
  containers:
    - name: nodeapp
      image: 519852036875.dkr.ecr.us-east-2.amazonaws.com/my-node.js-app:tagVersion
      ports:
        - containerPort: 3000
