nodejapp.yaml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejsapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
   app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: 519852036875.dkr.ecr.us-east-2.amazonaws.com/my-node.js-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
# service type loadbalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
