nodejsapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejsapp2
  template:
    metadata:
      labels:
        app: nodejsapp2
    spec:
      containers:
        - name: nodejsapp2
          image: 519852036875.dkr.ecr.us-east-2.amazonaws.com/my-node.js-app@sha256:a7a957ed73e68919aaaf9fdd547460c2a09a26c968cb30f0428313aafb735cc7
---
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp2-service
spec:
  type: NodePort
  selector:
    app: nodejsapp2
  ports:
    - port: 3000
      targetPort: 3000
