ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: bright.harithabal.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejsapp
                port:
                  number: 3000
    - host: night.harithabal.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejsapp2
                port:
                  number: 3000
